--- a/ConferenceWL/Base.lproj/Main.storyboard
+++ b/ConferenceWL/Base.lproj/Main.storyboard
@@ -147,6 +147,24 @@
             </objects>
             <point key="canvasLocation" x="1058" y="-537"/>
         </scene>
+        <!--Calendar View Controller-->
+        <scene sceneID="yCs-IS-hSG">
+            <objects>
+                <viewController restorationIdentifier="WLCalendarViewController" storyboardIdentifier="WLCalendarViewController" id="w6y-4a-Qf9" customClass="WLCalendarViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="C7G-pU-ClY"/>
+                        <viewControllerLayoutGuide type="bottom" id="wwH-CU-gdp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="YnM-A0-w9E">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KgV-wf-PkH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1321" y="-275"/>
+        </scene>
         <!--Floor Plan View Controller-->
         <scene sceneID="8A7-Fw-rUY">
             <objects>
